app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require foundation_and_overrides
 *= require_tree .
 */
* {
  font-family: 'Rock Salt', cursive;
}

html p {
  font-family: tahoma;
}


 html header {
    background-image: url("banner.jpg");
    background-position: center top;
    background-color: black;
    background-repeat: no-repeat;
    background: fill;
    color: white;
    text-align: center;
    padding: 10px;
    width: 100%;
    position: fixed;
    top: 0px;
    height: 20%;
    border: 2px solid black;
 }

 #title {
  margin-top: 9%;
}

 html h1, html h2, html h3, html h4 {
  font-family: 'Rock Salt', cursive;

  margin: 0;
  padding: 0;
  color: white;
 }

#game-over {
  margin: 20% auto 0 auto;
  width:50%;
}

#game-over h1{
  margin: 0 auto;
}

#end_game_stats ul{
  width: 50%;
  margin: 0;
}

#end_game_stats ul li{
  margin: 0;
}

#game-over h1, #game-over h3 #pending_game h1, #pending_game h4, #end_game_stats h3 {
  color: black;
}

#end_game_stats ul li{
  list-style-type: none;
  display: block;
  clear: both;
}


#pending_game {
  margin-top: 20%;
}

#footer {
  background-color: black;
  min-height: auto;
  width: 100%;
  position:fixed;
  height: 10%;
  bottom: 0px;
 }

 footer p {
  font-size: 10px;
  text-align: center;
  margin: 0;
  overflow:visible;
 }

 html button, #tempt-fate, #hide_me {
  background: radial-gradient(yellow, orange,#8F2400, #260000, black);
  border-radius: 5px;
  border: 2px solid black;
  color: black;
  font-family: 'Rock Salt', cursive;
}

#hide_me {
  width: 50%;
  margin-left: 25%;
}

html button:hover {
  background-color: #4D704D
}

html ul {
  /*margin-right: 25%*/
  margin: 0 auto;
  width: 80%;
  margin-left: 10%
}

html li {
  list-style-type: none;
  float: right;
  margin-right: 5%;
}

html a {
  color: black;
}

html a:hover {
  color: white;
}

html span {
  font-family: tahoma;
  font-size: 15px;
}

#battle_box label {
  color: white;
 }
/*
HOMEPAGE*/

.error {
    background-color: black;
    width: 50%;
    border-radius: 5%;
    border: 2px solid gray;
    opacity: .8;
    color: red;
    margin-left: 25%;
}

.error p, .error h4 {
    color: red;
}

#login_signup {
  background-image: url("Zombie_1.jpg");
  background-repeat: no-repeat;
  background-size: 100%;
  height: 100%;
  text-align: center;
  padding-top: 20%;
  padding-bottom: 20%;
}

.back_link a, .back_link_battle a {
    color: gray;
}

.back_link a:hover {
    color: black;
}

.back_link_battle a:hover {
    color: white;
}

#sign_up, #log_in {
/*  opacity: .8;*/
}

#login, #signup {
  margin-top: 15%;
}

/*/Users/*/

html .user_stats span{
  margin-top: 10%;
  font-size: 30px;
  font-family: 'Rock Salt', cursive;
  width: 50%;
  margin-left: 25%;
}

#your_points {
  margin-left: 0px;
}

#hide_me_stats {
  margin-top: 10px;
  margin-left: 25%;
}


#feed {
  margin-top: 15%;
  padding-bottom: 10%;
}

#post_container_human {
    border-radius: 5px;
    border: 3px solid black;
    background: radial-gradient(#AFC8E0,#7AA3CC, black);
    width: 80%;
    text-align: center;
    margin-left: 10%;
    margin-top: 2%;

}

#post_container_human h3, #post_container_zombie h3 {
  color: black;
}

#post_container_zombie {
    border-radius: 5px;
    border: 3px solid black;
    background: radial-gradient(#949470,#6B6B47, black);
    width: 80%;
    text-align: center;
    margin-left: 10%;
    margin-top: 2%;
    color: black;
}

.black_overlay{
    display: none;
    position: relative;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    background-color: black;
    z-index:1001;
    -moz-opacity: 0.8;
    opacity:.80;
    filter: alpha(opacity=80);
}
.white_content {
    /*text-align: center;*/
    display: none;
    position: fixed;
    top: 25%;
    left: 25%;
    width: 50%;
    height: 100%;
    padding: 16px;
    background-color: black;
    color: white;
    z-index:1002;
    overflow: auto;
}

#rules_list {
  margin-top: 5%;
}

#handle {
  padding-top: 20%;
  height: 50%;
  margin-top: 18%;
  font-size: 22px;
  color: white;
  font-family: 'Rock Salt', cursive;
}

#menu {
  display:none;
  margin-left: 25%;
  width: 50%;
  font-family: 'Rock Salt', cursive;
}

@media only screen and (min-device-width: 901px) and (max-device-width: 930px){
  html header {
    height: 90px;
  }

  h3 {
    font-size: 60%;
  }

  #menu {
    font-family: 'Rock Salt', cursive;
    display: block;
  }

  #feed {
    margin-top: 20%;
    padding-bottom: 27%;
  }

  .white_content {
    /*text-align: center;*/
    display: none;
    position: fixed;
    top: 1%;
    left: 2.5%;
    width: 95%;
    height: 85%;
  }

  #handle {
    text-align: center;
    margin-bottom: 5%;
    font-size: 30px;
  }
}

@media only screen and (min-device-width: 200px) and (max-device-width: 900px){


  #center {
    overflow: hidden;
  }


  html header {
    height: 110px;
    border: 7px solid black;
    position: fixed;
  }

  #login_signup {
    background-image: url("zombie_phone.jpg");
    text-align: center;
    height: auto;
    bottom: 0px;
    overflow: hidden;
    padding-bottom: 0px;
    margin-top: 100px;
  }

  #log_in {
    margin-top: 45%;
    width: 50%;
    opacity: .9;
  }

  #sign_up {
    width: 50%;
    opacity: .9;
  }

  #login {
    margin: 40% 10% 10% 10%;
  }

  #signup {
    margin: 20% 10% 10% 10%;
  }

  #signup input {
    width: 230px;
  }

/*  #login h1 {
    color: black;
  }*/

  #feed {
    margin-top: 35%;
  }

  #footer {
    background-color: black;
    min-height: 10%;
    width: 100%;
    position:fixed;
    height: 12%;
    bottom: 0px;
 }

  .white_content {
    /*text-align: center;*/
    display: none;
    position: fixed;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    z-index:1002;
  }

  #post_container_human, #post_container_zombie {
    padding: 5px;
  }

  #handle {
    text-align: center;
    margin-bottom: 5%;
    font-size: 18px;
  }
  #menu {
    font-family: 'Rock Salt', cursive;
    margin-top:1%;
    margin-bottom: 7%;
    display: block;
  }

  html ul {
    width: 100%;
    margin-left: 0;
    margin-right: 0;
  }

  html li {
    width: 100%;
    margin-left: 0;
    margin-right: 0;
  }

  html button, #hide_me_stats, #hide_me_menu{
    margin-left: 0px;
    width: 100%;
    font-size: 18px;
    font-weight: bold;
    font-family: 'Rock Salt', cursive;
  }

  html a {
    width: 100%;
    font-size: 18px;
  }
}

